[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/variations/0/aquarium.jpg" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.87451, 0.945098, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Aquarium" type="Sprite" parent="."]
position = Vector2( 959.702, 435.058 )
scale = Vector2( 0.590842, 0.590842 )
texture = ExtResource( 8 )

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.0
margin_top = 8.0
margin_right = 507.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Mantén vivo al pez"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 55.8927, 193.841 )
scale = Vector2( 2, 2 )

[node name="HSlider" type="HSlider" parent="Node2D"]
margin_left = 14.7027
margin_top = 9.13525
margin_right = 227.703
margin_bottom = 25.1352
step = 0.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="Node2D"]
margin_left = 14.7027
margin_top = 71.1352
margin_right = 227.703
margin_bottom = 87.1352
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider3" type="HSlider" parent="Node2D"]
margin_left = 14.7027
margin_top = 125.635
margin_right = 227.703
margin_bottom = 141.635
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider4" type="HSlider" parent="Node2D"]
margin_left = 14.7027
margin_top = 176.635
margin_right = 227.703
margin_bottom = 192.635
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider5" type="HSlider" parent="Node2D"]
margin_left = 14.7027
margin_top = 228.635
margin_right = 227.703
margin_bottom = 244.635
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 665.0
margin_top = 737.0
margin_right = 1344.0
margin_bottom = 771.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D2" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D2"]
margin_left = 88.0722
margin_top = 162.647
margin_right = 286.072
margin_bottom = 200.647
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Temperatura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Node2D2/Label"]
margin_left = 106.0
margin_top = 84.0
margin_right = 315.0
margin_bottom = 105.0
color = Color( 0.494118, 0.992157, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Node2D2/Label"]
margin_top = 84.0
margin_right = 106.0
margin_bottom = 105.0
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Node2D2/Label"]
margin_left = 315.0
margin_top = 84.0
margin_right = 421.0
margin_bottom = 105.0
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node2D2"]
margin_left = 89.0722
margin_top = 287.441
margin_right = 287.072
margin_bottom = 325.441
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Limpieza"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="Node2D2/Label2"]
margin_left = 211.0
margin_top = 82.2064
margin_right = 420.0
margin_bottom = 103.206
color = Color( 0.494118, 0.992157, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="Node2D2/Label2"]
margin_left = -1.0
margin_top = 82.0
margin_right = 211.0
margin_bottom = 103.0
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Node2D2"]
margin_left = 90.3322
margin_top = 393.975
margin_right = 288.332
margin_bottom = 431.975
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Iluminación"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Node2D2/Label3"]
margin_left = 103.74
margin_top = 86.6726
margin_right = 312.74
margin_bottom = 107.673
color = Color( 0.494118, 0.992157, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="Node2D2/Label3"]
margin_left = -2.25995
margin_top = 86.6726
margin_right = 103.74
margin_bottom = 107.673
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="Node2D2/Label3"]
margin_left = 312.74
margin_top = 86.6726
margin_right = 418.74
margin_bottom = 107.673
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Node2D2"]
margin_left = 91.3719
margin_top = 498.028
margin_right = 289.372
margin_bottom = 536.028
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Oxigenación"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="Node2D2/Label4"]
margin_left = 102.7
margin_top = 83.619
margin_right = 311.7
margin_bottom = 104.619
color = Color( 0.494118, 0.992157, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="Node2D2/Label4"]
margin_left = -3.29962
margin_top = 83.619
margin_right = 102.7
margin_bottom = 104.619
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect9" type="ColorRect" parent="Node2D2/Label4"]
margin_left = 311.7
margin_top = 83.619
margin_right = 417.7
margin_bottom = 104.619
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Node2D2"]
margin_left = 93.3719
margin_top = 606.976
margin_right = 291.372
margin_bottom = 644.976
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Alimento"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect10" type="ColorRect" parent="Node2D2/Label5"]
margin_left = 100.7
margin_top = 80.6718
margin_right = 309.7
margin_bottom = 101.672
color = Color( 0.494118, 0.992157, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect11" type="ColorRect" parent="Node2D2/Label5"]
margin_left = -5.29962
margin_top = 80.6718
margin_right = 100.7
margin_bottom = 101.672
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect12" type="ColorRect" parent="Node2D2/Label5"]
margin_left = 309.7
margin_top = 80.6718
margin_right = 415.7
margin_bottom = 101.672
color = Color( 0.976471, 0.447059, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 575.757
margin_top = 734.24
margin_right = 642.757
margin_bottom = 772.24
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Vida"
__meta__ = {
"_edit_use_anchors_": false
}
